# AyCmakeTemplate-HeaderOnly

./: CMakeLists.txt  README.md  README_CN.md
cmake/: Init.cmake  Options.cmake
include/ayheader/: ay_max.hpp  ay_proj.hpp
main/: CMakeLists.txt  main.cc
